Added Dashboard Summary and UI fixes

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "html2pdf.js": "^0.12.1",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
